# net-game-demo

game_controller_server/: .gitignore  Cargo.toml  Readme.md
game_controller_server/src/: controller.rs  main.rs  service.rs
game_controller_server/src/config/: server_config.rs
game_controller_server/src/server/: mod.rs  server_ctl.rs
game_controller_server/src/store/: mod.rs  store_ctl.rs  store_data.rs
game_controller_server/src/user/: account_ctl.rs  login_sign_ctl.rs  mod.rs
net_game_demo/: .gitignore  .gitmodules  .ignore  Makefile  Readme.md  net_game_demo.code-workspace  net_game_demo.uproject
net_game_demo/Config/: DefaultEditorPerProjectUserSettings.ini  DefaultEditorSettings.ini  DefaultEngine.ini  DefaultGame.ini  DefaultGameplayTags.ini  DefaultInput.ini
net_game_demo/Content/: NetGameInstance_BP.uasset
net_game_demo/Content/Assets/: BoxColor_Mat.uasset  BoxColor_Mat_2.uasset  crosshair_Mat.uasset  crosshair_Mat_2.uasset
net_game_demo/Content/Blueprints/: GameCamera_BP.uasset  MonsterSpawnPolicy_BP.uasset  PlayerPawnController_BP.uasset  PlayerPawn_BP.uasset
net_game_demo/Content/Config/: LevelConfig_Config.uasset  ServerConfig_Config.uasset
net_game_demo/Content/FX/: M_Spawn_FX.uasset  M_Spawn_JData.uasset  P_Color_Mat.uasset  comb_M_spawn.uasset  (+1 more)
net_game_demo/Houdini/: comb_M_spawn.fbx  net-game-demoFX.hiplc  niagara1.hbjson
net_game_demo/Saved/: Login_World_Map8D416D844B795B4B82D4DB8726B80867.tmp  Play_World_MapB901F85E42958DCFD0865EB93DA96D74.tmp
net_game_demo/Source/: demo.Target.cs  demoEditor.Target.cs  demoServer.Target.cs
(+322 files in other folders)
