[package]
name = "game_controller_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = "0.4.24"
lazy_static = "1.4.0"
log = "0.4.17"
md5 = "0.7.0"
rand = "0.8.5"
redis = "0.23.0"
redis_rs = "0.9.0"
reqwest = "0.11.18"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.96"
tokio = {version = "1.28.2", features = ["full"]}
